# bakemono

./: .dockerignore  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.tracker  README.md  SECURITY.md  board.toml.example  docker-compose.deploy.yml  docker-compose.yml  new-arch.md
.github/workflows/: ci.yml  images.yml  release.yml  server.yml
crates/bakemono-app/: Cargo.toml  README.md  build.rs  tauri.conf.json
crates/bakemono-app/frontend/: index.html  main.js
crates/bakemono-app/icons/: icon.icns
crates/bakemono-app/src/: gui.rs  lib.rs  main.rs  patreon.rs
crates/bakemono-app/src/core/: catalog.rs  config.rs  identity.rs  mod.rs  pipeline.rs  scrape.rs  seeder.rs  source.rs
crates/bakemono-app/tests/: roundtrip.rs
crates/bakemono-board/: Cargo.toml  board.toml.example
crates/bakemono-board/src/: api.rs  booru.rs  config.rs  crypto.rs  db.rs  health.rs  indexer.rs  instance.rs  kubo.rs  main.rs  mirror.rs  platform.rs  publish.rs  ratelimit.rs  restore.rs  sanitize.rs  scrape.rs  seo.rs  thumb.rs  trusted_proxy.rs  verifier.rs  web.rs
crates/bakemono-cli/: Cargo.toml
crates/bakemono-cli/src/: main.rs
crates/bakemono-core/: Cargo.toml
crates/bakemono-core/src/: defaults.rs  error.rs  lib.rs  protocol.rs  tags.rs  validation.rs
crates/bakemono-core/src/events/: manifest.rs  mod.rs  mod_publication.rs  takedown.rs
crates/bakemono-core/src/manifest/: canonical.rs  key.rs  mod.rs
crates/bakemono-core/tests/: events.rs  manifest.rs
crates/bakemono-daemon/: Cargo.toml
crates/bakemono-daemon/src/: catalog.rs  config.rs  content.rs  daemon.rs  ipc.rs  lib.rs  logging.rs  main.rs  pipeline.rs  scrape.rs  seeder.rs  source.rs  thumbnail.rs
crates/bakemono-daemon/tests/: roundtrip.rs
crates/bakemono-engine/: Cargo.toml
crates/bakemono-engine/src/: config.rs  content.rs  daemon.rs  identity.rs  ipc.rs  lib.rs  seeder.rs  version.rs
crates/bakemono-pipeline/: Cargo.toml
crates/bakemono-pipeline/src/: lib.rs  main.rs
crates/bakemono-pipeline/tests/: pipeline.rs
crates/bakemono-scraper/: Cargo.toml
crates/bakemono-scraper/src/: lib.rs  main.rs
crates/bakemono-scraper/tests/: scrape.rs
crates/bakemono-seeder/: Cargo.toml
crates/bakemono-seeder/src/: lib.rs
crates/bakemono-seeder/tests/: seed.rs
crates/bakemono-seednode/: Cargo.toml
crates/bakemono-seednode/src/: main.rs  source.rs
crates/bakemono-smoke/: Cargo.toml
crates/bakemono-smoke/src/: lib.rs
crates/bakemono-smoke/tests/: end_to_end.rs
crates/bakemono-torrent/: Cargo.toml
crates/bakemono-torrent/examples/: fetch.rs  seed.rs
crates/bakemono-torrent/src/: lib.rs  post_torrent.rs  scrape.rs
defaults/: Caddyfile  README.md  kubo-init.sh  relays.txt  stun.txt  trackers.txt
docs/: ARCHITECTURE.md  DEMO.md  GLOSSARY.md  KEEPERS.md  MVP.md  PROTOCOL.md  RELEASING.md  ROADMAP.md  SEEDING.md
relay/: config.toml
scripts/: keeper-setup.sh
sidecars/webtorrent/: package-lock.json  package.json  seed.mjs
tools/: preview.html
tools/p2p/: leech.mjs  package-lock.json  package.json  seed.mjs  tleech.mjs
