[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/bakemonoq/bakemono"

[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
rsa = { version = "0.9", features = ["sha2", "pem"] }
aes-gcm = "0.10"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util", "signal", "sync"] }
anyhow = "1"
hex = "0.4"
axum = "0.8"
maud = "0.27"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "macros"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
