[package]
name = "bakemono-app"
description = "Cross-platform desktop client: a thin GUI over the bakemono daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
default-run = "bakemono-app"

[lib]
name = "bakemono_app"
path = "src/lib.rs"

[[bin]]
name = "bakemono-app"
path = "src/main.rs"

[dependencies]
bakemono-engine = { path = "../bakemono-engine" }
tokio.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
tracing.workspace = true

tauri = { version = "2", optional = true }
tracing-subscriber = { workspace = true, optional = true }
tracing-appender = { workspace = true, optional = true }

[build-dependencies]
tauri-build = "2"

[features]
default = ["gui"]
gui = ["dep:tauri", "dep:tracing-subscriber", "dep:tracing-appender"]
