[package]
name = "bakemono-board"
description = "Self-hostable board: indexes kind 31063 events into Postgres and serves a browse UI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bakemono-core = { path = "../bakemono-core" }
bakemono-torrent = { path = "../bakemono-torrent" }
nostr-sdk.workspace = true
rustls.workspace = true
sqlx.workspace = true
axum.workspace = true
maud.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
nostr-relay-builder.workspace = true
