[package]
name = "bakemono-board"
description = "Self-hostable board: server-side scraping, IPFS archive, signed manifest publishing"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bakemono"
path = "src/main.rs"

[dependencies]
bakemono-core = { path = "../bakemono-core" }
bakemono-scraper = { path = "../bakemono-scraper" }
sqlx.workspace = true
axum.workspace = true
maud.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
hex.workspace = true
rand.workspace = true
rsa.workspace = true
aes-gcm.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["multipart", "stream", "query", "json", "rustls"] }
toml = "0.8"
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ammonia = "4.1.3"
