[package]
name = "bakemono-cli"
description = "Command-line client for the bakemono daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bakemono"
path = "src/main.rs"

[dependencies]
bakemono-engine = { path = "../bakemono-engine" }
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
