[package]
name = "bakemono-core"
description = "Shared Bakemono protocol types built on Nostr"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nostr = { workspace = true, features = ["pow-multi-thread"] }
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
