[package]
name = "bakemono-core"
description = "Shared Bakemono protocol types"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
hex.workspace = true
