[package]
name = "bakemono-daemon"
description = "Headless contributor daemon: scrape, seed, sign and publish your own subscriptions"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "bakemono_daemon"
path = "src/lib.rs"

[[bin]]
name = "bakemono-daemon"
path = "src/main.rs"

[[bin]]
name = "scrapetest"
path = "src/bin/scrapetest.rs"
required-features = ["harness"]

[dependencies]
bakemono-core = { path = "../bakemono-core" }
bakemono-engine = { path = "../bakemono-engine" }
bakemono-scraper = { path = "../bakemono-scraper" }
nostr-sdk.workspace = true
rustls.workspace = true
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true

nostr-relay-builder = { workspace = true, optional = true }

[features]
harness = ["dep:nostr-relay-builder"]
