[package]
name = "bakemono-engine"
description = "Headless seeding and orchestration daemon for the desktop app"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bakemono-core = { path = "../bakemono-core" }
bakemono-torrent = { path = "../bakemono-torrent" }
tokio = { workspace = true, features = ["sync", "net"] }
tokio-util.workspace = true
anyhow.workspace = true
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
reqwest = { version = "0.13", default-features = false, features = ["default-tls"] }
dirs.workspace = true
tracing.workspace = true
nostr.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
