[package]
name = "bakemono-pipeline"
description = "Wires the scraper to signed kind 31063 events and publishes them"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bakemono-core = { path = "../bakemono-core" }
bakemono-scraper = { path = "../bakemono-scraper" }
bakemono-seeder = { path = "../bakemono-seeder" }
nostr-sdk.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
dirs.workspace = true

[dev-dependencies]
nostr-relay-builder.workspace = true
