[package]
name = "bakemono-seeder"
description = "Spawns and drives the webtorrent Node sidecar to seed files and report magnets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
