[package]
name = "bakemono-seednode"
description = "Headless farm node: caches and seeds popular or endangered swarm content by policy"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "bakemono-seednode"
path = "src/main.rs"

[dependencies]
bakemono-engine = { path = "../bakemono-engine" }
tokio.workspace = true
tokio-util.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tracing.workspace = true
rustls.workspace = true
